# Church_Powerpoint_Maker

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  PRODUCT.md  Presentation1.pptx  README.md  components.json  example_from_template.pptx  full_code.py  functions.py  package-lock.json  package.json  powerpoint.py  random.json  render.yaml  requirements.txt  slide_making.py  tests.ipynb  variables.py
.github/workflows/: ci.yml
crates/deck-builder/: Cargo.toml
crates/deck-builder/assets/: heidelberg.json  template.pptx  wcf.json
crates/deck-builder/examples/: demo.rs
crates/deck-builder/src/: domain.rs  lib.rs  presets.rs  textproc.rs
crates/deck-builder/src/sources/: esv.rs  hymnary.rs  mod.rs
crates/deck-builder/tests/: build_deck.rs  textproc.rs
crates/pptx-template/: Cargo.toml
crates/pptx-template/src/: lib.rs
crates/pptx-template/tests/: presentation.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  songs.rs  store.rs
crates/server/static/: admin.js  app.css  app.js  editor-controller.js  generated.js  library.js
crates/server/templates/: admin.html  builder.html  generated.html  library.html  login.html
crates/server/tests/: endpoints.rs
docs/: powerpoint-repair-postmortem.md
legacy/: prototype-content-parity-plan.md  prototype-rust-plan.md
legacy/python/: README.md  example_from_template.pptx  functions.py  psalms.json  template.pptx
scripts/: validate-openxml.sh
tests/: editor-controller.test.js  editor-loaders.test.js  editor-rendering.test.js  test_functions.py
tests/helpers/: editor-fixture.js
tools/openxml-validator/: OpenXmlValidator.csproj  Program.cs
