[workspace]
members = [
    "crates/pptx-template",
    "crates/deck-builder",
    "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.12"
async-trait = "0.1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
hmac = "0.12"
once_cell = "1"
quick-xml = "0.37"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "limit"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
