[package]
name = "deck-builder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
once_cell.workspace = true
pptx-template = { path = "../pptx-template" }
regex.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
quick-xml.workspace = true
tokio.workspace = true
zip.workspace = true
