[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
deck-builder = { path = "../deck-builder" }
http.workspace = true
csv.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
pptx-template = { path = "../pptx-template" }
