[package]
name = "server"
version = "0.1.0"
default-run = "server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
askama.workspace = true
async-trait.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
chrono.workspace = true
deck-builder = { path = "../deck-builder" }
http.workspace = true
hmac.workspace = true
pptx-template = { path = "../pptx-template" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
zip.workspace = true

[dev-dependencies]
